tests/baselines/reference/FunctionDeclaration6.errors.txt
==== tests/cases/compiler/FunctionDeclaration6.ts (1 errors) ====
    {
        function foo();
        function bar() { }
                 ~~~
!!! FunctionDeclaration6.ts(3,14): error TS2239: Function overload name must be 'foo'.
    }